2009-03-26  Adam Endrodi <ext-adam.endrodi@nokia.com>

	* src/hd-incoming-event-window.c:
	  Communicate the event time and message in the X Window properties.
	  The WM will need to know about them because it will need to layout
	  the notification window (thumbnail) entirely on its own.
	* src/test-incoming-event.c:
	  Add longer message text.

2009-03-24  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#107329 - Opening account from grouped mail notifications
	broken.

	* src/hd-incoming-events.c (group_activate_notifications): Create a
	DBus Message to call.

	* src/hd-notification-manager.c
	  (hd_notification_manager_call_message):
	* src/hd-notification-manager.h: Add function to call a DBusMessage.

	* debian/changelog: Update

2009-03-23  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Released 0.3.18
	* configure.ac: 0.3.18

2009-03-10  Adam Endrodi <ext-adam.endrodi@nokia.com>

	NB#95670 PLayed games are not going to pause state ,when
	         sms / message is received

	* src/hd-incoming-event-window.c:
	  Don't accept focus.
	* src/test-incoming-event.c:
	  Make it able to create previews and not previews.

2009-03-20  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#105850 - Implementing fallback for background images.

	* src/hd-backgrounds.c (get_background_for_view_from_theme,
	  get_background_for_view, hd_backgrounds_set_background,
	  hd_backgrounds_get_background): Implementing fallback for background
	  images.
	* src/hd-change-background-dialog.c
	  (hd_change_background_dialog_append_backgrounds,
	  hd_change_background_dialog_constructed,
	  hd_change_background_dialog_response): Image sets set all
	  backgrounds. Support fallback for background images.

	* debian/changelog: Update

2009-03-19  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-incoming-event-window.c (hd_incoming_event_window_realize):
	  Use undecorated rgba windows for incoming events. Fixes: NB#106312.

	* debian/changelog: Update
